Close #53, close #54, close #55, close #56, close #57, close #58, close #59